# libjingle

./: .gitmodules  CMakeLists.txt  Makefile  get_third_party.sh
talk/base/: gunit.h  linux_unittest.cc
talk/examples/call/: call_unittest.cc
talk/xmpp/: chatroommodule_unittest.cc
